--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Flask==2.3.3
 flask-cors==4.0.0
 pandas==1.5.3
 joblib==1.2.0
-prophet==1.1
-pystan==2.19.1.1
+prophet==1.1.5
+--find-links https://pypi.anaconda.org/conda-forge/simple
