--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.3.3
 flask-cors==4.0.0
 pandas==1.5.3
+numpy==1.21.6
 joblib==1.2.0
 prophet==1.1.5
 --find-links https://pypi.anaconda.org/conda-forge/simple
